--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <script>
+      window.intercomSettings = {
+        api_base: "https://api-iam.intercom.io",
+        app_id: "y1ix66fg",
+      };
+    </script>
+    <script>
+      (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/{!! env('INTERCOM_APP_ID') !!}';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(document.readyState==='complete'){l();}else if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+    </script>
   </head>
   <body>
     <main>
@@ -38,6 +47,8 @@
           <h2>We are briefly offline for routine maintenance.</h2>
 
           <p>We’ll be back in a few hours. Thank you for your patience.</p>
+
+          <p>In the meantime, reach out to +1 855 GOBOUTIQUE (855 462 6884).</p>
         </div>
 
         <img src="/img/pool.jpg" alt="adventure" />
